kubernetes/max-weather-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: current-weather-service
spec:
  selector:
    app: current_weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: hourly-weather-service
spec:
  selector:
    app: hourly_weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: daily-weather-service
spec:
  selector:
    app: daily_weather
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
