kubernetes/max-weather-nginx-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: max-weather
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: external-nginx
  rules:
    - http:
        paths:
          - path: /current
            pathType: Prefix
            backend:
              service:
                name: current-weather-service
                port:
                  number: 80
          - path: /hourly
            pathType: Prefix
            backend:
              service:
                name: hourly-weather-service
                port:
                  number: 80
          - path: /daily
            pathType: Prefix
            backend:
              service:
                name: daily-weather-service
                port:
                  number: 80
